tests/ui/attr_name_value.stderr
error: fixcol-derive error: Could not read config from name/value style attribute.

       Expected parameters like #[fixcol(width = 4)]
 --> tests/ui/attr_name_value.rs:5:16
  |
5 |     #[fixcol = "path/goes/here"]
  |                ^^^^^^^^^^^^^^^^
