tests/ui/attr_name_value.rs
use fixcol_derive::ReadFixed;

#[derive(ReadFixed)]
struct Thing {
    #[fixcol = "path/goes/here"]
    field: String,
}

pub fn main() {}
